<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ca.pigggott.sample</groupId>
	<artifactId>graal.sample</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>25</maven.compiler.release>
		<graalvm.version>25.0.3</graalvm.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>25.0.3</version>
		</dependency>

		<dependency>
			<groupId>org.graalvm.sdk</groupId>
			<artifactId>nativeimage</artifactId>
			<version>${graalvm.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.graalvm.nativeimage</groupId>
			<artifactId>svm</artifactId>
			<version>${graalvm.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<executions>
					<execution>
						<!-- Default configuration for running -->
						<!-- Usage: mvn clean javafx:run -->
						<id>default-cli</id>
						<configuration>
							<mainClass>ca.pigggott.sample.graal.App</mainClass>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- 
					https://graalvm.github.io/native-build-tools/latest/maven-plugin.html
				-->
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
				<version>1.1.0</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<id>build-native</id>
						<goals>
							<goal>compile-no-fork</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
				<configuration>
					<mainClass>ca.pigggott.sample.graal.App</mainClass>
					<verbose>true</verbose>
					<quickBuild>true</quickBuild>
					<buildArgs combine.children="append">
						<buildArg>--enable-sbom=false</buildArg>
						<buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
					</buildArgs>
					<jvmArgs>
						<jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
					</jvmArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>windows</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<properties>
				<os.family>windows</os.family>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<configuration>
							<buildArgs combine.children="append">
								<buildArg>-H:Preserve=package=com.sun.prism.d3d.*</buildArg>
							</buildArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>mac</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<os.family>mac</os.family>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<configuration>
							<buildArgs combine.children="append">
								<buildArg>-H:Preserve=package=com.sun.prism.es2.*</buildArg>
								<buildArg>-H:Preserve=package=com.sun.prism.mtl.*</buildArg>
							</buildArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>linux</id>
			<activation>
				<os>
					<family>linux</family>
				</os>
			</activation>
			<properties>
				<os.family>linux</os.family>
			</properties>
		</profile>
	</profiles>
</project>
